# rust-lgalloc

./: BENCH.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-plz.yml  test.yml
benches/: alloc_bench.rs  bench.rs
examples/: disk_usage.rs  leak.rs  repro.rs
src/: lib.rs
tests/: basic.rs  concurrent.rs  disable.rs
