[package]
name = "lgalloc"
version = "0.1.3"
edition = "2021"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
description = "Large object allocator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/antiguru/rust-lgalloc"
rust-version = "1.70"

[dependencies]
crossbeam-deque = "0.8.3"
libc = "0.2"
memmap2 = "0.5"
tempfile = "3"
thiserror = "1.0"

[profile.bench]
debug = 1
codegen-units = 1
lto = true
