[package]
name = "lgalloc"
version = "0.4.0"
edition = "2021"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
description = "Large object allocator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/antiguru/rust-lgalloc"
rust-version = "1.72"

[dependencies]
crossbeam-deque = "0.8.3"
libc = "0.2"
memmap2 = "0.5"
numa_maps = "0.1"
page_size = "0.6.0"
tempfile = "3"
thiserror = "1.0"

[dev-dependencies]
serial_test = "2.0"

[profile.release]
debug = 2
codegen-units = 1
lto = true
