[package]
name = "lgalloc"
version = "0.6.0"
edition = "2021"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
description = "Large object allocator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/antiguru/rust-lgalloc"
rust-version = "1.72"

[dependencies]
crossbeam-deque = "0.8.5"
libc = "0.2"
page_size = "0.6.0"
thiserror = "2.0"

[dev-dependencies]
hdrhistogram = "7"

[[bench]]
name = "alloc_bench"
harness = false

[profile.release]
debug = 2
codegen-units = 1
lto = true
